# image-transformation

./: Dockerfile  README.md  compose.yaml  pyproject.toml
image_transformation/: __init__.py  api.py  app.py  models.py  request_handlers.py  transformation.py
image_transformation/api/: __init__.py  v1.py  v2.py
tests/: test_loaders.py  test_transformations.py
