[tool.poetry]
name = "image-transformation"
version = "0.1.0"
description = "A small Python API for transforming images"
authors = ["Anders Fischer-Nielsen <andersfischern@me.com>"]
readme = "README.md"
packages = [{include = "image-transformation"}]

[tool.poetry.dependencies]
python = "^3.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
